--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,6 +54,9 @@
     <!--moment js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 
+    <!--moment precise range-->
+    <script src="/javascripts/moment-precise-range/moment-precise-range.js"></script>
+
     <!--highcharts-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highstock/5.0.12/highstock.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
