--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -16,8 +16,8 @@
 	<div class="container dashboard">
 		<div class="clearfix">
 
-			<div class="row" style="margin-bottom: 30px">
-				<div class="col-md-4 text-center">
+			<div class="row">
+				<div class="col-md-4 text-center bottom30">
 					<div id="users" class="box-shadow padding-top-bottom">
 						<h3>Total Members</h3>
 						<div class="item html">
@@ -32,7 +32,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-4 text-center">
+				<div class="col-md-4 text-center bottom30">
 					<div class="box-shadow padding-top-bottom" id="activeUsers">
 						<h3>Active Members</h3>
 						<div class="item html help-tip">
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-4 text-center">
+				<div class="col-md-4 text-center bottom30">
 					<div id="registeredUsers" class="box-shadow padding-top-bottom">
 						<h3>Registered Members</h3>
 						<div class="item html help-tip">
@@ -69,10 +69,10 @@
 			</div>
 
 			<div class="row">
-				<div class="col-md-8" style="margin-bottom: 30px">
+				<div class="col-md-8 bottom30">
 					<div id="container" class="box-shadow" style="width:100%; height:400px;"></div>
 				</div>
-				<div class="col-md-4" style="position: relative; margin-bottom: 30px">
+				<div class="col-md-4 bottom30" style="position: relative;">
 					<div class="row" style="position: relative; height: 50%;">
 						<div class="col-md-12" style="position: relative;">
 							<div id="box1" class="box-shadow text-center">
@@ -101,5 +101,6 @@
 
 			</div>
 		</div>
+	</div>
 
 </section>
