added meta tags for facebook and other social networks

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--for sharing on facebook and others-->
+    <meta property="og:url" content="https://members.debating.de" />
+    <meta property="og:type" content="web app" />
+    <meta property="og:title" content="BDU Members Area" />
+    <meta property="og:description" content="Internal club management of the Berlin Debating Union" />
+    <meta property="og:image" content="https://members.debating.de/images/bdudb_landing-1024x682.png" />
+
     <title>BDU Members Area</title>
 
     <!-- load javascripts -->
