--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,6 +75,7 @@
     <script src="/javascripts/successService.js"></script>
     <script src="/javascripts/controllers/rankingCtrl.js"></script>
     <script src="/javascripts/controllers/dashboardCtrl.js"></script>
+    <script src="/javascripts/controllers/financeCtrl.js"></script>
 
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/inline_help_style.css">
