--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -12,7 +12,6 @@
 
 <section>
 
-	<!-- Total Club Debt Chart -->
 	<div class="container dashboard">
 		<div class="clearfix">
 
@@ -69,6 +68,7 @@
 			</div>
 
 			<div class="row">
+				<!-- Total Club Debt Chart -->
 				<div class="col-md-8 bottom30">
 					<div id="container" class="box-shadow" style="width:100%; height:400px;"></div>
 				</div>
@@ -96,6 +96,24 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+
+			</div>
+
+			<div class="row">
+
+				<div class="col-md-12 text-center bottom30">
+					<div id="gender" class="box-shadow padding-top-bottom">
+
+						<div class="row">
+							<div class="col-sm-12 col-md-2" id="genderContainer1" style="height:180px;"></div>
+							<div class="col-sm-12 col-md-2" id="genderContainer2" style="height:180px;"></div>
+							<div class="col-sm-12 col-md-2" id="genderContainer3" style="height:180px;"></div>
+							<div class="col-sm-12 col-md-3" id="genderContainer4" style="height:180px;"></div>
+							<div class="col-sm-12 col-md-3" id="genderContainer5" style="height:180px;"></div>
+						</div>
+
 					</div>
 				</div>
 
