added add to calendar button to tournaments view

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,6 +76,7 @@
     <script src="/javascripts/controllers/rankingCtrl.js"></script>
     <script src="/javascripts/controllers/dashboardCtrl.js"></script>
     <script src="/javascripts/controllers/financeCtrl.js"></script>
+    <script src="/javascripts/controllers/tournamentsCtrl.js"></script>
 
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/inline_help_style.css">
