--- a/views/index.ejs
+++ b/views/index.ejs
@@ -125,6 +125,8 @@
                     <a class="dropdown-item hidden-md-up" href="/#/vorstand" data-toggle="collapse" data-target=".navbar-collapse">Create Tournament</a>
                     <a class="dropdown-item hidden-sm-down" href="/#/finances">Club Members</a>
                     <a class="dropdown-item hidden-md-up" href="/#/finances" data-toggle="collapse" data-target=".navbar-collapse">Club Members</a>
+                    <a class="dropdown-item hidden-sm-down" href="/#/dashboard">Dashboard</a>
+                    <a class="dropdown-item hidden-md-up" href="/#/dashboard" data-toggle="collapse" data-target=".navbar-collapse">Dashboard</a>
                 </div>
             </li>
         </ul>
