improved reg feature to register two teammates for OPD competitions

--- a/public/templates/successEditTemplate.html
+++ b/public/templates/successEditTemplate.html
@@ -25,8 +25,8 @@
 	 tournament.pivot_partner1 == null ||
 	 tournament.pivot_success == null ||
 	 tournament.pivot_success == 'judge' ||
-	 tournament.pivot_success == 'judge2'
-">
+	 tournament.pivot_success == 'judge2'"
+>
 	<label for="partner2">Partner 2</label>
 	<select id="partner2"
 			ng-change="setPartner(selectedSuccess.pivot_partner2.id, tournament.pivot_id, 2)"
