changed meaning of active users in dashboard

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -43,7 +43,7 @@
 									<circle id="circle" class="circle_animation" r="70" cy="50%" cx="50%" stroke-width="6" stroke="#FFF" fill="none"></circle>
 								</g>
 							</svg>
-							<p>Members who logged in within the last two weeks.</p>
+							<p>Members who went to at least one tournament.</p>
 						</div>
 					</div>
 				</div>
