--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,7 +93,7 @@
         <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
     </button>
     <a class="navbar-brand" href="#/profile">
-        <img class="nav-logo" ng-src="http://debating.de/BDUDBdev/bdu_white_logo.png" onerror="this.src='images/bdu_quad.png'" alt=""/>
+        <img class="nav-logo" ng-src="/images/bdu_white_logo.png" onerror="this.src='images/bdu_quad.png'" alt=""/>
     </a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
@@ -136,7 +136,7 @@
         <ul class="navbar-nav my-2 my-lg-0" ng-show="authenticated">
             <li class="nav-item">
                 <a href="/#/profile" class="hidden-md-down nav-link navbar-brand">
-                    <img class="nav-image" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
+                    <img class="nav-image" ng-src="http://debating.de/members_area/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
                 </a>
             </li>
             <li class="nav-item hidden-sm-down">
