--- a/views/index.ejs
+++ b/views/index.ejs
@@ -136,7 +136,7 @@
         <ul class="navbar-nav my-2 my-lg-0" ng-show="authenticated">
             <li class="nav-item">
                 <a href="/#/profile" class="hidden-md-down nav-link navbar-brand">
-                    <img class="nav-image" ng-src="http://debating.de/members_area/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
+                    <img class="nav-image" ng-src="http://root.debating.de/members_area/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
                 </a>
             </li>
             <li class="nav-item hidden-sm-down">
