revoved 'Signed in as ...' of Navbar on non-large screens

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -141,7 +141,7 @@
                     <img class="nav-image" ng-src="http://root.debating.de/members_area/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
                 </a>
             </li>
-            <li class="nav-item hidden-sm-down">
+            <li class="nav-item hidden-lg-down">
                 <span class="navbar-text" style="margin-right: 15px">Signed in as {{user.vorname}}</span>
             </li>
             <li class="nav-item">
