--- a/views/error.ejs
+++ b/views/error.ejs
@@ -68,7 +68,7 @@
                          onerror="this.src='images/bdu_quad.png'" alt=""/>
                 </a>
             </li>
-            <li class="nav-item hidden-sm-down">
+            <li class="nav-item hidden-lg-down">
                 <span class="navbar-text" style="margin-right: 15px">Signed in as {{user.vorname}}</span>
             </li>
             <li class="nav-item">
