added analytics tracking code

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,6 +99,7 @@ header .intro-text .skills {
         padding-right: 15px;
         padding-left: 15px;
         font-size: 4em;
+        line-height: 1.3em;
     }
     header .intro-text .skills {
         font-size: 1.75em;
