--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,7 +117,7 @@
             </li>
             <li class="nav-item" ng-show="authenticated">
                 <a href="/#/tournaments" class="nav-link hidden-md-down">
-                    Tournamenlg
+                    Tournaments
                     <span ng-show="user.new_tournament_count > 0" class="count">{{user.new_tournament_count}}</span>
                 </a>
                 <a href="/#/tournaments" class="nav-link hidden-md-up" data-toggle="collapse" data-target=".navbar-collapse">Tournaments</a>
