--- a/public/views/ranking.html
+++ b/public/views/ranking.html
@@ -10,15 +10,10 @@
 	</div>
 </header>
 
-<section>
+<section class="container">
 
-	<!-- Ranking Chart -->
-	<div class="container">
-		<div class="clearfix">
-
-			<div id="container" style="width:100%; height:600px;"></div>
-
-		</div>
-	</div>
+	<p style="font-size: larger" class="text-center">
+		After careful consideration, the board (Vorstand) has decided to remove this feature.
+	</p>
 
 </section>
