--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -168,13 +168,90 @@ textarea {
     margin-bottom: 30px;
 }
 
-.tournaments-dialog-checkbox {
-    text-align: left !important;
+/* remove standard-styles */
+.pretty-checkbox input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border:none;
+    border-radius: 0;
+    font-size: 1em;
+    width: 100%
 }
-.tournaments-dialog-checkbox p {
-    right: 150px !important;
-    width: 250px !important;
+
+/* graceful degradation for ie8 */
+.pretty-checkbox input[type='checkbox'],
+.pretty-checkbox input[type='radio'] {
+    width:auto;
+    float:left;
+    margin-right: .75em;
+    background:transparent;
+    border:none;
 }
+
+.pretty-checkbox input[type='checkbox']:checked,
+.pretty-checkbox input[type='checkbox']:not(:checked),
+.pretty-checkbox input[type='radio']:checked,
+.pretty-checkbox input[type='radio']:not(:checked) {
+    background: transparent;
+    position: relative;
+    visibility: hidden;
+    margin:0;
+    padding:0;
+}
+
+.pretty-checkbox input[type='checkbox'] + label,
+.pretty-checkbox input[type='radio'] + label {
+    cursor: pointer;
+}
+
+.pretty-checkbox input[type='checkbox']:checked + label::before,
+.pretty-checkbox input[type='checkbox']:not(:checked) + label::before,
+.pretty-checkbox input[type='radio']:checked + label::before,
+.pretty-checkbox input[type='radio']:not(:checked) + label::before {
+    content:' ';
+    display:inline-block;
+    width: 17px;
+    height:17px;
+    position: relative;
+    top:4px;
+    border: 1px solid #bbb;
+    background: white;
+    margin-right: 1em;
+    box-shadow: inset 0 1px 1px 0 rgba(0,0,0,.1);
+}
+
+.pretty-checkbox input[type=radio]:checked + label::before,
+.pretty-checkbox input[type=radio]:not(:checked) + label::before {
+    border-radius: 30px;
+}
+
+.pretty-checkbox input[type='checkbox']:hover  + label::before,
+.pretty-checkbox input[type='radio']:hover  + label::before {
+    background:#ddd;
+    box-shadow: inset 0 0 0 2px white;
+}
+
+.pretty-checkbox input[type='checkbox']:checked  + label::before,
+.pretty-checkbox input[type='radio']:checked  + label::before {
+    background:black;
+    box-shadow: inset 0 0 0 2px white;
+}
+
+.alert-checkbox input[type='checkbox']:checked + label::before,
+.alert-checkbox input[type='checkbox']:not(:checked) + label::before,
+.alert-checkbox input[type='radio']:checked + label::before,
+.alert-checkbox input[type='radio']:not(:checked) + label::before {
+    border: 1px solid #52081e;
+    background: #b732537a;
+}
+
+.alert-checkbox input[type='checkbox']:hover  + label::before,
+.alert-checkbox input[type='radio']:hover  + label::before {
+    background: rgba(158, 38, 59, 0.87);
+    box-shadow: inset 0 0 0 2px rgba(255, 244, 244, 0.48);
+}
+
 
 .input-group-addon {
     border-radius: 0 !important;
