--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -75,27 +75,17 @@
     color: #fff;
 }
 
-.dashboard #box1, #box2 {
+.dashboard #timeBox {
     position: relative;
     height: calc(100% - 15px);
     min-height: 180px;
     color: #fff;
     padding: 15px;
-}
-
-.dashboard #box1 {
-    background-color: #fabb3d;
-    border: 1px solid #f9aa0b;
-    margin-bottom: 15px;
-}
-
-.dashboard #box2 {
     background-color: #62bd7d;
     border: 1px solid #4d9060;
-    margin-top: 15px;
 }
 
-.dashboard #box2 p {
+.dashboard #timeBox p {
     font-size: large;
 }
 
