--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,8 +77,9 @@
     <script src="/javascripts/moment-precise-range/moment-precise-range.js"></script>
 
     <!--highcharts-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highstock/5.0.12/highstock.js"></script>
+    <script src="https://code.highcharts.com/stock/highstock.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/annotations.js"></script>
     <script src="/javascripts/highcharts/themes/dark_unica.js"></script>
 
     <!--OWN FILES-->
