--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,12 +1,17 @@
 .dropdown-item{
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 .text-white:hover {
-  background-color: #1c1f23;
+  background-color: #1c1f2396;
 }
 #navbarProfileImage {
   height: 30px;
   width: 30px;
   border: 0.1px solid gainsboro;
   border-radius: 50%;
+}
+@media screen and (min-width: 992px) {
+  #profileDropdown {
+    margin-left: auto;
+  }
 }
