--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -1,6 +1,6 @@
 #profileContainer {
   color: white;
-  background-color: var(--light-olive);
+  background-color: var(--gray-dark);
 }
 
 #profileImageContainer {
