added working row collapse added Register and Add to calendar buttons

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,10 @@
 #mainContent {
   min-height: calc(100vh - 61px - 36px);
 }
+
+@media (min-width: 992px) {
+  #mainContent {
+    max-width: 2000px;
+    margin: 0 auto;
+  }
+}
