added spinner to load old tournaments button

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,3 +8,10 @@
     margin: 0 auto;
   }
 }
+
+#spinnerContainer {
+  min-height: calc(100vh - 61px - 36px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
