--- a/src/components/Pages/Signup/Signup.css
+++ b/src/components/Pages/Signup/Signup.css
@@ -1,3 +1,7 @@
+#signupContainer {
+  min-height: calc(100vh - 61px - 36px);
+}
+
 #sideImage {
   background: url("./pexels-photo-417023.jpeg") no-repeat right;
   background-size: cover;
