--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .dropdown-item{
   font-size: 1.1rem;
 }
-.text-white:hover {
+.text-white.dropdown-item:hover {
   background-color: #1c1f2396;
 }
 #navbarProfileImage {
