--- a/src/components/Pages/Login/Login.css
+++ b/src/components/Pages/Login/Login.css
@@ -1,12 +1,12 @@
 #loginPage {
   background: no-repeat center center fixed;
-  background-image: url("./background.jpg");
+  background-image: url('./background.jpg');
   background-size: cover;
   min-height: calc(100vh - 62px - 36px);
 }
 
 .login-box {
-  background: rgba(356,356,356,0.9);
+  background: rgba(356, 356, 356, 0.9);
 }
 
 #photoCredit {
