--- a/src/components/Pages/profilePages/Signup/Signup.css
+++ b/src/components/Pages/profilePages/Signup/Signup.css
@@ -3,6 +3,6 @@
 }
 
 #sideImage {
-  background: url("pexels-photo-417023.jpeg") no-repeat right;
+  background: url('pexels-photo-417023.jpeg') no-repeat right;
   background-size: cover;
 }
