--- a/src/css/scrollbar.css
+++ b/src/css/scrollbar.css
@@ -1,5 +1,4 @@
-::-webkit-scrollbar-track
-{
+::-webkit-scrollbar-track {
   width: 2px;
   height: 2px;
   border-radius: 10px;
@@ -7,8 +6,7 @@
   margin-right: 2px;
 }
 
-::-webkit-scrollbar
-{
+::-webkit-scrollbar {
   height: 9px;
   width: 9px;
   background: white; /* For browsers that do not support gradients */
@@ -16,15 +14,13 @@
   margin-bottom: 2px;
 }
 
-::-webkit-scrollbar-thumb
-{
+::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0, 0, 0, 0.3);
   margin-right: 2px;
   margin-bottom: 2px;
 }
 
-::-webkit-scrollbar-thumb:hover
-{
+::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.5);
 }
