use css grid for page layout

--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -1,4 +1,5 @@
-:root {
-  --bright-red: #dc3545;
-  --light-olive: #3fac81;
-}
+$color_1: #f3f3f3;
+$background_color_1: #eaeaea;
+$background_color_2: var(--gray-dark);
+$background_color_3: #3b4248;
+$border_color_1: #676869;
