--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,11 +1,54 @@
-.mainContent {
-  min-height: calc(100vh - 62px - 36px);
-  padding: 1.5rem;
+@import '../css/breakpoints.scss';
+
+html,
+body,
+#root {
+  height: 100%;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+nav {
+  grid-area: nav;
+}
+main {
+  grid-area: main;
+}
+footer {
+  grid-area: footer;
 }
 
-@media (min-width: 992px) {
+.cursorPointer {
+  cursor: pointer;
+}
+
+.page-content {
+  padding: 1rem 0.4rem;
+  background: white;
+}
+
+.app {
+  display: grid;
+  grid-template-areas:
+    'nav'
+    'main'
+    'footer';
+  grid-template-rows: auto 1fr auto;
+  height: 100%;
+}
+
+@include media-breakpoint-up(lg) {
   .mainContent {
     max-width: 2000px;
     margin: 0 auto;
+    padding: 1.5rem;
+  }
+
+  .page-content {
+    padding: 3rem;
+    border-radius: 0.5rem;
+    box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.19), 0 2px 2px rgba(0, 0, 0, 0.23);
   }
 }
