--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -20,6 +20,10 @@ footer {
   grid-area: footer;
 }
 
+.container-fluid {
+  padding: unset;
+}
+
 .cursorPointer {
   cursor: pointer;
 }
@@ -42,13 +46,10 @@ footer {
 @include media-breakpoint-up(lg) {
   .mainContent {
     max-width: 2000px;
-    margin: 0 auto;
     padding: 1.5rem;
   }
 
   .page-content {
     padding: 3rem;
-    border-radius: 0.5rem;
-    box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.19), 0 2px 2px rgba(0, 0, 0, 0.23);
   }
 }
