--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -2,4 +2,10 @@ $color_1: #f3f3f3;
 $background_color_1: #eaeaea;
 $background_color_2: var(--gray-dark);
 $background_color_3: #3b4248;
+$background_color_4: #2d2d2d;
 $border_color_1: #676869;
+
+$bdu-positive: #84e8a7;
+$bdu-negative: #eb4741;
+
+$bdu-primary: var(--info);
